--- a/package.json
+++ b/package.json
@@ -2,15 +2,28 @@
   "name": "vitepress-plugin-bprogress",
   "version": "1.0.0",
   "description": "A VitePress plugin for beautiful progress bars using bprogress",
-  "main": "src/index.ts",
-  "module": "src/index.ts",
+  "main": "lib/index.cjs",
+  "module": "lib/index.js",
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./lib/index.d.ts",
+      "import": "./lib/index.js",
+      "require": "./lib/index.cjs"
+    },
+    "./style": "./lib/index.css"
   },
+  "types": "lib/index.d.ts",
   "files": [
+    "lib",
     "src"
   ],
+  "scripts": {
+    "build": "tsdown",
+    "build:docs": "vitepress build docs",
+    "dev": "vitepress dev docs",
+    "preview": "vitepress preview docs"
+  },
   "keywords": [
     "vitepress",
     "plugin",
@@ -25,7 +38,7 @@
   },
   "peerDependencies": {
     "typescript": "^5",
-    "vitepress": "^1.0.0 || ^2.0.0"
+    "vitepress": "^1.0.0 || ^2.0.0 || ^2.0.0-alpha.1"
   },
   "dependencies": {
     "@bprogress/core": "^1.3.4"
